--- a/app/src/main/res/layout/item_type.xml
+++ b/app/src/main/res/layout/item_type.xml
@@ -10,8 +10,19 @@
         android:id="@+id/tv_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/menu_button_text_size"
+        android:layout_centerVertical="true"
         android:text="VIDEO TYPE"
-        android:textSize="@dimen/menu_button_text_size"/>
+        android:textColor="@android:color/darker_gray"
+        android:textSize="16sp"/>
+
+    <ImageView
+        android:id="@+id/iv_download"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:src="@android:drawable/stat_sys_download"
+        android:visibility="gone"
+        android:background="@android:color/darker_gray"/>
 
 </RelativeLayout>
